Fixed Stretched Background Images and Established Working Background Component [#20] [#6]

--- a/src/Components.css
+++ b/src/Components.css
@@ -66,11 +66,8 @@
 }
 
 #backgroundIMG {
-  background-position: 50% 50%;
-  background-size: cover;
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
+  opacity: 0.8;
+  object-fit: cover;
 }
 
 #homeTxt {
